--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "react-transition-group": "^4.4.5",
         "reselect": "^5.1.0",
         "sass": "^1.63.6",
+        "serve": "^14.2.4",
         "socket.io-client": "^4.7.4",
         "use-immer": "^0.9.0",
         "vite-plugin-pwa": "^0.17.4",
